--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <h2>Apakah Anda siap untuk menjadi programer yang handal?</h2>
           <h3>Ayo belajar coding, ayo belajar menjadi lebih kreatif!</h3>
         </div>
-        <span class="btn message">Mulai Belajar</span>
+        <span class="btn message">Mulai Belajar Sekarang</span>
       </div>
     </div>
     <footer>
